Moved All Web Data Variables into ModelAnalyzer Function

--- a/website/server/templates/DataHouse.html
+++ b/website/server/templates/DataHouse.html
@@ -13,7 +13,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.2"></script>
+  <script>var id ={{id}}; </script>
   <script src="static/{{ js }}"></script>
+  
   
 </head>
 
@@ -37,7 +39,7 @@
         <a class="nav-link" id="woosh" href="/game_log"><b>Game Log</b></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" id="woosh" href="/game"><b>Sample Game</b></a>
+        <a class="nav-link" id="woosh" href="/game?id=888630"><b>Sample Game</b></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" id="woosh" href="/debrief"><b>Debrief</b></a>
