--- a/website/server/templates/index.html
+++ b/website/server/templates/index.html
@@ -48,15 +48,22 @@
 <div class="container">
   <div class="row">
         <div class="col-lg-12">
-          <div class="box red">
+          <div class="box red" align="center">
             <h1>Machine Learning Scoring Predictions and The Sportsbook Market</h1>
-            <h6 align="center"><i>What is the Best Way to Predict Future Scores Based on Past Data?</i></h6>
+            <h4><i>What is the Best Way to Predict Future NBA Scores Based on Past Data?</i></h4>
             <br>
-            <img src="../../../pages/Resources/assets/images/Fig1.png" class="img-fluid artimage" alt="Responsive image" align="center"><img>
-            <p>The purpose of this project was to analyze several different weather variables and their relationship to latitude. We looked at the maximum temperature, humidity, cloudiness and wind speed from a random sample of approximately 550 cities across the globe to see how position relative to the equator has on weather desirabilty. We used the citipy module to generate our sample cities and the OpenWeatherMap API to gather our weath data on each city. Overall, we found that as cities move further away from the equator, the more their maximum temperature drops. All other weather events we looked at had weak relationships to latitude.
-              Weather continues to be a highly variable process influenced by a multitude of different variables.  
+            <img src="static/assets/images/NBA/intro.png" class="img-fluid artimage" alt="Responsive image" style="margin-bottom: 20px"><img>
+
+            <p>The purpose of this project is to identify the game-level variables that have the most influence on team scoring, create a machine learning model based on a team's past performance in these selected variables to predict individual game scores and evaluate the success of these predictions based on the decisions that would be made given the available data and market conditions.
             </p>
-            <p>One note to keep in mind: Since we chose to use cities as our markers for our weather variables, we end up getting more Northern Hemisphere cities than Southern Hemisphere ones. This is due to more hospitable land mass being available in this Hemisphere and cities providing continually updated data.</p>
+            <p>
+              This project involves all three phases of the ETL Life Cycle. Data Extraction of historical team stats from Basketball Reference and historical market lines from OddsShark was handled with the Requests and Selenium Python Libraries. Data Cleaning and Transformation was handled with the Pandas, NumPy and Regex Libraries.
+              Model Creation was handled with Sci-Kit Learn Libraries. Model Evaluation was handled by my own custom defined ModelAnalyzer Class which transformed single score point estimates into their implied market counterparts in order to easily compare traditional sportsbook markets with my sole point estimate for each game.   
+            </p>
+            <p>Data Storage is handled by SQL database on the website's backend. Data Loading is handled by the Python Flask and SqlAlchemy libraries and SQL queries to the cleaned databasee.
+              Data Presentation via this Web Application is handled by the Javascript Libraries:  Plotly, D3, jQuery, Popper, Observable, Color-Thief and built on the Bootstrap 4 Framework.</p>
+            <br>
+            <p>Select A Tab At the Top to Explore All the Findings!</p>
           </div>
         </div>
 </div>
