Added Analysis Page with Outline, Updated Nav Bar and Transfered Analysis Graphs from Notebook to Website

--- a/website/server/templates/index.html
+++ b/website/server/templates/index.html
@@ -29,16 +29,13 @@
           <a class="nav-link" id="woosh" href="../overview"><b>Dashboard</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="pages/Predictions.html"><b>Model Predictions</b></a>
-        </li>
-        <li class="nav-item active">
           <a class="nav-link" id="woosh" href="../game_log"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" id="woosh" href="../game"><b>Sample Game</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../debrief"><b>Debrief</b></a>
+          <a class="nav-link" id="woosh" href="../analysis"><b>Analysis</b></a>
         </li>
         </li>
       </ul>
