--- a/website/server/templates/DataHouse.html
+++ b/website/server/templates/DataHouse.html
@@ -49,7 +49,7 @@
         <a class="nav-link" id="woosh" href="/game?id=888630"><b>Sample Game</b></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" id="woosh" href="/debrief"><b>Debrief</b></a>
+        <a class="nav-link" id="woosh" href="/analysis"><b>Analysis</b></a>
       </li>
       </li>
     </ul>
