Added Model 2 Analysis, Page Headings and New Image Assets

--- a/website/server/templates/index.html
+++ b/website/server/templates/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" id="woosh" href="../game_log"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../game"><b>Sample Game</b></a>
+          <a class="nav-link" id="woosh" href="../game?id=888630"><b>Sample Game</b></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" id="woosh" href="../analysis"><b>Analysis</b></a>
@@ -57,7 +57,7 @@
               This project involves all three phases of the ETL Life Cycle. Data Extraction of historical team stats from Basketball Reference and historical market lines from OddsShark was handled with the Requests and Selenium Python Libraries. Data Cleaning and Transformation was handled with the Pandas, NumPy and Regex Libraries.
               Model Creation was handled with Sci-Kit Learn Libraries. Model Evaluation was handled by my own custom defined ModelAnalyzer Class which transformed single score point estimates into their implied market counterparts in order to easily compare traditional sportsbook markets with my sole point estimate for each game.   
             </p>
-            <p>Data Storage is handled by SQL database on the website's backend. Data Loading is handled by the Python Flask and SqlAlchemy libraries and SQL queries to the cleaned databasee.
+            <p>Data Storage is handled by a SQL database on the website's backend. Data Loading is handled by the Python Flask and SqlAlchemy libraries and SQL queries to the cleaned database.
               Data Presentation via this Web Application is handled by the Javascript Libraries:  Plotly, D3, jQuery, Popper, Observable, Color-Thief and built on the Bootstrap 4 Framework.</p>
             <br>
             <p>Select A Tab At the Top to Explore All the Findings!</p>
