--- a/website/server/templates/index.html
+++ b/website/server/templates/index.html
@@ -37,6 +37,8 @@
         <li class="nav-item active">
           <a class="nav-link" id="woosh" href="../analysis"><b>Analysis</b></a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" id="woosh" href="/debrief"><b>Debrief</b></a>
         </li>
       </ul>
     </div>
