--- a/website/server/templates/analysis.html
+++ b/website/server/templates/analysis.html
@@ -17,7 +17,7 @@
 <body>
   <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" id="sitetitle" href="/intro"><h4>NBA Project</h4></a>
+    <a class="navbar-brand" id="sitetitle" href="/"><h4>NBA Project</h4></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,22 +25,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/intro"><b>Home</b></a>
+          <a class="nav-link" href="/"><b>Home</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/overview"><b>Dashboard</b></a>
+          <a class="nav-link" href="/overview"><b>Dashboard</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/game_log"><b>Game Log</b></a>
+          <a class="nav-link" href="/game_log"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/game"><b>Sample Game</b></a>
+          <a class="nav-link" href="/analysis"><b>Analysis</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/analysis"><b>Analysis</b></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/debrief"><b>Debrief</b></a>
+          <a class="nav-link" href="/debrief"><b>Debrief</b></a>
         </li>
       </ul>
     </div>
