--- a/website/server/templates/index.html
+++ b/website/server/templates/index.html
@@ -15,7 +15,7 @@
 <body>
   <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" id="sitetitle" href="index.html"><h4>NBA Project</h4></a>
+    <a class="navbar-brand" id="sitetitle" href="/"><h4>NBA Project</h4></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -23,22 +23,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../intro"><b>Home</b></a>
+          <a class="nav-link" href="/"><b>Home</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../overview"><b>Dashboard</b></a>
+          <a class="nav-link" href="/overview"><b>Dashboard</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../game_log"><b>Game Log</b></a>
+          <a class="nav-link" href="/game_log"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../game?id=888630"><b>Sample Game</b></a>
+          <a class="nav-link" href="/analysis"><b>Analysis</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="../analysis"><b>Analysis</b></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="/debrief"><b>Debrief</b></a>
+          <a class="nav-link" href="/debrief"><b>Debrief</b></a>
         </li>
       </ul>
     </div>
@@ -62,7 +59,7 @@
             <p>Data Storage is handled by a SQL database on the website's backend. Data Loading is handled by the Python Flask and SqlAlchemy libraries and SQL queries to the cleaned database.
               Data Presentation via this Web Application is handled by the Javascript Libraries:  Plotly, D3, jQuery, Popper, Observable, Color-Thief and built on the Bootstrap 4 Framework.</p>
             <br>
-            <p>Select A Tab At the Top to Explore All the Findings!</p>
+            <p>Select a Tab At the Top to Explore All the Findings!</p>
           </div>
         </div>
 </div>
